--- a/swarm.yml
+++ b/swarm.yml
@@ -1,4 +1,36 @@
 ---
+#ansible-playbook provision.yml  --syntax-check
+#http://docs.ansible.com/ansible/latest/modules/user_module.html
+#http://docs.ansible.com/ansible/latest/modules/lineinfile_module.html
+#http://docs.ansible.com/ansible/latest/modules/authorized_key_module.html
+
+- hosts:      all
+  tasks:
+  - name:     Add the user ansible
+    user:
+      name:   ansible
+      password: $6$HeBm16RZ$Xf3FcOa.6bCv00S/YUmaA3PSqgy933b.ZACgIhsq..LygVmxfIMENRdOf1ck3dH8ahVDGKQE7WIfIk/QyrqNb0 #Hash for password "ansible"
+      groups:  wheel
+      append: yes
+
+  - name: Set NOPASSWD for wheel group
+    lineinfile:
+      path: /etc/sudoers
+      state: present
+      regexp: '^%wheel\s'
+      line: '%wheel ALL=(ALL) NOPASSWD: ALL'
+
+  - name: Set authorized key for ansible user
+    authorized_key:
+      user: ansible
+      state: present
+      key: "{{ lookup('file', '../ansible/keys/id_rsa.pub') }}"
+
+  - name: Set authorized key for vagrant user
+    authorized_key:
+      user: vagrant
+      state: present
+      key: "{{ lookup('file', '../ansible/keys/id_rsa.pub') }}"
 # determine the status of each manager node and break them
 # into two groups:
 #   - swarm_manager_operational (swarm is running and active)
